# ofair_mvp

./: .env.example  .env.production  .gitignore  CLAUDE.md  CUSTOMER_READY_VALIDATION.md  E2E_TESTING_FLOWS.md  E2E_TEST_REPORT.md  GEMINI.md  MODELS_SUMMARY.md  Masterplan.md  README.md  alembic.ini  bugs.md  docker-compose.production.yml  docker-compose.yml  pyproject.toml
libs/python-shared/database/: __init__.py  base.py
libs/python-shared/python_shared/middleware/: __init__.py  role_middleware.py
libs/python_shared/config/: settings.py
libs/python_shared/database/: connection.py  models.py
migrations/: env.py
scripts/: init-db.sql  init_database.sql
services/admin-service/: Dockerfile  pyproject.toml  requirements.txt  validate_admin_service.py
services/admin-service/app/: __init__.py  config.py  database.py  main.py
services/admin-service/app/middleware/: __init__.py  auth.py
services/admin-service/app/models/: admin.py
services/admin-service/app/routes/: __init__.py  analytics.py  leads.py  reports.py  system.py  users.py
services/admin-service/app/services/: __init__.py  audit_service.py  dashboard_service.py  metrics_service.py
services/admin-service/tests/: test_admin.py
services/auth-service/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements-dev.txt  requirements.txt
services/auth-service/app/: __init__.py  database.py  deps.py  main.py
services/auth-service/app/api/: __init__.py  auth.py
services/auth-service/app/models/: __init__.py  auth.py
services/auth-service/app/services/: __init__.py  otp_service.py
services/auth-service/tests/: __init__.py  test_auth.py
services/leads-service/: .env.test  Dockerfile  requirements.txt
services/leads-service/app/: __init__.py  deps.py  main.py
services/leads-service/app/api/: __init__.py  lead_board.py  leads.py
services/leads-service/app/models/: __init__.py  leads.py
services/leads-service/app/services/: __init__.py  board_service.py  geo_service.py  lead_service.py
services/leads-service/tests/: __init__.py  test_lead_board.py  test_leads.py
services/notifications-service/: Dockerfile  pyproject.toml  requirements.txt  validate_notifications_service.py  validate_simple.py
services/notifications-service/app/: config.py  database.py  main.py
services/notifications-service/app/middleware/: auth.py
services/notifications-service/app/models/: notifications.py
services/notifications-service/app/services/: delivery_service.py  notification_service.py  preferences_service.py  template_service.py
services/notifications-service/tests/: test_notifications.py
services/payments-service/: Dockerfile  requirements.txt  validate_service.py
services/payments-service/app/: config.py  database.py  main.py
services/payments-service/app/middleware/: auth.py
services/payments-service/app/models/: payments.py
services/payments-service/app/services/: balance_service.py  commission_service.py  invoice_service.py  payment_gateway_service.py  settlement_service.py
services/payments-service/app/utils/: hebrew_utils.py  pdf_generator.py
services/proposals-service/: Dockerfile  requirements.txt
services/proposals-service/app/: __init__.py  deps.py  main.py
services/proposals-service/app/api/: __init__.py  proposals.py
services/proposals-service/app/models/: __init__.py  proposals.py
services/proposals-service/app/services/: __init__.py  notification_service.py  proposal_service.py
services/proposals-service/tests/: __init__.py  test_proposals.py
services/referrals-service/: Dockerfile  requirements.txt  simple_validation.py  validate_service.py
services/referrals-service/app/: config.py  database.py  main.py
services/referrals-service/app/middleware/: auth.py
services/referrals-service/app/models/: referrals.py
services/referrals-service/app/services/: commission_service.py  referral_service.py
services/referrals-service/app/utils/: commission_calculator.py  hebrew_utils.py
services/referrals-service/tests/: test_referrals.py
services/users-service/: Dockerfile  requirements.txt
services/users-service/app/: __init__.py  deps.py  main.py
services/users-service/app/api/: professionals.py  users.py
services/users-service/tests/: test_professionals.py  test_users.py
tests/e2e/: run_tests_simulation.py  test_admin_workflows.py  test_comprehensive_requirements.py  test_corrected_requirements.py  test_customer_flow.py  test_live_services.py  test_professional_flow.py  test_real_user_flows.py  test_referral_flows.py  test_summary.py  validate_flows.py  validate_test_structure.py
web/pro-pwa/: ARCHITECTURE_ANALYSIS_REPORT.md  CLAUDE.md  Dockerfile  FINAL_DEPLOYMENT_STATUS.md  FINAL_MIGRATION.sql  PLAY_STORE_SETUP_GUIDE.md  README.md  SECURITY_AUDIT_REPORT.md  capacitor.config.json  create-keystore-manual.md  index.html  jest.config.js  manual_migration.md  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json
web/pro-pwa/resources/: ICON_INSTRUCTIONS.md  README.md
web/pro-pwa/review/: README.md  architecture_audit_summary.md  backend_audit.md  production_checklist.md  supabase_assets_inventory.md  system_overview.md  user_flows.md
web/pro-pwa/src/: App.tsx  AppRoutes.tsx  index.css
web/pro-pwa/supabase/: config.toml
(+548 files in other folders)
